--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
-    "bulma": "^0.8.0",
-    "node-sass": "^4.12.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bulma": "^0.8.0",
+    "node-sass": "^4.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
